--- a/tadoba-react/package.json
+++ b/tadoba-react/package.json
@@ -20,8 +20,10 @@
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "cashfree-pg": "^4.3.10",
+    "framer-motion": "^12.4.7",
     "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.9",
     "react-calendar": "^5.1.0",
     "react-datepicker": "^8.0.0",
     "react-dom": "^18.3.1",
