--- a/safari-backend/.env
+++ b/safari-backend/.env
@@ -2,3 +2,10 @@ PORT=5000
 MONGO_URI=mongodb://127.0.0.1:27017/
 EMAIL_USER=rcoder00@gmail.com
 EMAIL_PASS=smmv mhld gjaf wpqu
+RAZORPAY_KEY=rzp_test_MFLhROUXtI492b
+RAZORPAY_SECRET=AHbEbUkuWvxpC5ES7dTsTXfL
+
+
+
+
+
