--- a/safari-backend/.env
+++ b/safari-backend/.env
@@ -1,5 +1,6 @@
 PORT=5000
 MONGO_URI=mongodb://127.0.0.1:27017/
+JWT_SECRET=thisismyjwttoken
 EMAIL_USER=rcoder00@gmail.com
 EMAIL_PASS=smmv mhld gjaf wpqu
 RAZORPAY_KEY=rzp_test_MFLhROUXtI492b
