--- a/tadoba-react/package.json
+++ b/tadoba-react/package.json
@@ -14,30 +14,36 @@
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@heroicons/react": "^2.2.0",
     "@popperjs/core": "^2.11.8",
-    "@tailwindcss/vite": "^4.0.9",
+    "@tailwindcss/postcss": "^4.0.12",
     "antd": "^5.24.1",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "cashfree-pg": "^4.3.10",
     "framer-motion": "^12.4.7",
     "moment": "^2.30.1",
+    "postcss": "^8.5.3",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.9",
     "react-calendar": "^5.1.0",
     "react-datepicker": "^8.0.0",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.4.0",
+    "react-quill": "^2.0.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.1.1",
-    "react-slick": "^0.30.2",
+    "react-slick": "^0.30.3",
     "reactjs-popup": "^2.0.6",
     "sass": "^1.83.1",
     "slick-carousel": "^1.8.1",
-    "tailwindcss": "^4.0.9"
+    "tailwindcss": "^4.0.12"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
+    "@tailwindcss/vite": "^4.0.12",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
