--- a/tadoba-react/package.json
+++ b/tadoba-react/package.json
@@ -23,13 +23,16 @@
     "bootstrap-icons": "^1.11.3",
     "cashfree-pg": "^4.3.10",
     "framer-motion": "^12.4.7",
+    "lucide-react": "^0.486.0",
     "moment": "^2.30.1",
     "postcss": "^8.5.3",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.9",
     "react-calendar": "^5.1.0",
+    "react-csv": "^2.2.2",
     "react-datepicker": "^8.0.0",
     "react-dom": "^18.3.1",
+    "react-feather": "^2.0.10",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.4.0",
     "react-quill": "^2.0.0",
