--- a/tadoba-react/package.json
+++ b/tadoba-react/package.json
@@ -23,6 +23,8 @@
     "bootstrap-icons": "^1.11.3",
     "cashfree-pg": "^4.3.10",
     "framer-motion": "^12.4.7",
+    "jspdf": "^3.0.1",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.486.0",
     "moment": "^2.30.1",
     "postcss": "^8.5.3",
@@ -33,13 +35,16 @@
     "react-datepicker": "^8.0.0",
     "react-dom": "^18.3.1",
     "react-feather": "^2.0.10",
+    "react-helmet": "^6.1.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.4.0",
     "react-quill": "^2.0.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.1.1",
     "react-slick": "^0.30.3",
+    "react-to-print": "^3.0.5",
     "reactjs-popup": "^2.0.6",
+    "recharts": "^2.15.2",
     "sass": "^1.83.1",
     "slick-carousel": "^1.8.1",
     "tailwindcss": "^4.0.12"
