--- a/safari-backend/package.json
+++ b/safari-backend/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
+    "start": "cross-env NODE_ENV=production node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -10,6 +11,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@babel/preset-env": "^7.26.9",
+    "@babel/preset-react": "^7.26.3",
+    "@babel/register": "^7.25.9",
     "antd": "^5.24.1",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
@@ -23,10 +27,18 @@
     "mongoose": "^8.10.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.0",
-    "razorpay": "^2.9.5"
+    "razorpay": "^2.9.5",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-router-dom": "^7.5.0",
+    "slugify": "^1.6.6",
+    "ua-parser-js": "^2.0.3"
   },
   "devDependencies": {
     "@types/node": "^22.13.8",
-    "nodemon": "^3.1.9"
+    "@vitejs/plugin-react": "^4.4.0",
+    "cross-env": "^7.0.3",
+    "nodemon": "^3.1.9",
+    "vite": "^6.3.0"
   }
 }
