--- a/tadoba-react/package.json
+++ b/tadoba-react/package.json
@@ -40,7 +40,8 @@
     "react-icons": "^5.4.0",
     "react-quill": "^2.0.0",
     "react-responsive-carousel": "^3.2.23",
-    "react-router-dom": "^7.1.1",
+    "react-router": "^6.14.2",
+    "react-router-dom": "^6.14.2",
     "react-slick": "^0.30.3",
     "react-to-print": "^3.0.5",
     "reactjs-popup": "^2.0.6",
@@ -60,6 +61,6 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.12.0",
-    "vite": "^6.0.1"
+    "vite": "^6.3.0"
   }
 }
