--- a/tadoba-react/package.json
+++ b/tadoba-react/package.json
@@ -4,10 +4,12 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "dev": "node server",
+    "build": "npm run build:client && npm run build:server",
+    "build:client": "vite build",
+    "build:server": "vite build --ssr src/entry-server.jsx --outDir dist/server",
+    "preview": "cross-env NODE_ENV=production node server.js",
+    "lint": "eslint ."
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
@@ -16,6 +18,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@heroicons/react": "^2.2.0",
     "@popperjs/core": "^2.11.8",
+    "@remix-run/router": "^1.23.0",
     "@tailwindcss/postcss": "^4.0.12",
     "antd": "^5.24.1",
     "aos": "^2.3.4",
@@ -23,6 +26,8 @@
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "cashfree-pg": "^4.3.10",
+    "compression": "^1.8.0",
+    "express": "^5.1.0",
     "framer-motion": "^12.4.7",
     "jspdf": "^3.0.1",
     "jwt-decode": "^4.0.0",
@@ -42,12 +47,13 @@
     "react-quill": "^2.0.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router": "^6.14.2",
-    "react-router-dom": "^6.14.2",
+    "react-router-dom": "^6.30.0",
     "react-slick": "^0.30.3",
     "react-to-print": "^3.0.5",
     "reactjs-popup": "^2.0.6",
     "recharts": "^2.15.2",
     "sass": "^1.83.1",
+    "sirv": "^3.0.1",
     "slick-carousel": "^1.8.1",
     "tailwindcss": "^4.0.12"
   },
@@ -57,11 +63,12 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
+    "cross-env": "^7.0.3",
     "eslint": "^9.15.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.12.0",
-    "vite": "^6.3.0"
+    "vite": "^6.3.3"
   }
 }
